회원가입 팝오버로 수정 댓글 및 댓글 패이징 완료 답글 어떻게 해야할까 게시글 삭제 완료 스크롤 메뉴 추가

--- a/WebContent/SmartEditor/sample/photo_uploader/callback.html
+++ b/WebContent/SmartEditor/sample/photo_uploader/callback.html
@@ -12,6 +12,7 @@
 		
         // execute callback script
         var sUrl = document.location.search.substr(1);
+        alert(sUrl);
 		if (sUrl != "blank") {
 	        var oParameter = {}; // query array
 
